cmake_minimum_required(VERSION 3.16)
project(cxx_coursera)

add_subdirectory(lectures/hello_wrld)
add_subdirectory(lectures/types)
add_subdirectory(lectures/container_ops)
add_subdirectory(lectures/input_output)
add_subdirectory(tasks/task_01)
add_subdirectory(lectures/assignment)
add_subdirectory(lectures/logical_ops)
add_subdirectory(tasks/task_02)
