cmake_minimum_required(VERSION 3.16)
project(cxx-coursera-white-belt)

add_subdirectory(lectures/hello_wrld)
add_subdirectory(lectures/types)
add_subdirectory(lectures/container_ops)
add_subdirectory(lectures/input_output)
add_subdirectory(tasks/task_01)
add_subdirectory(lectures/assignment)
add_subdirectory(lectures/logical_ops)
add_subdirectory(tasks/task_02)
add_subdirectory(tasks/task_03)
add_subdirectory(tasks/task_04)
add_subdirectory(tasks/task_05)
add_subdirectory(tasks/task_06)
add_subdirectory(tasks/task_07)
add_subdirectory(tasks/task_08)
add_subdirectory(tasks/task_09)
add_subdirectory(tasks/task_10)
add_subdirectory(tasks/task_11)
add_subdirectory(tasks/task_12)
add_subdirectory(lectures/reference)
add_subdirectory(tasks/task_13)
add_subdirectory(tasks/task_14)
add_subdirectory(tasks/task_15)
add_subdirectory(tasks/task_16)
add_subdirectory(lectures/vector)
